# handlebars_switch

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: continuous-integration-workflow.yml
src/: lib.rs  switch.rs
